--- a/insightsinfographic.html
+++ b/insightsinfographic.html
@@ -218,7 +218,7 @@
     </main>
     
     <footer class="bg-gray-900 text-white p-4 text-center text-sm">
-        <p>Data synthesized from "The Performance and Revenue Impact of Product Recommendation Engines Across Global E-commerce" report.</p>
+       <p>Data synthesized from <a href="https://docs.google.com/document/d/1Nfom8zPZgSJOySOpeNOeLOnMTwwE4phmentBvGqNz1M/edit?usp=sharing" class="text-blue-400 hover:underline" target="_blank">"The Performance and Revenue Impact of Product Recommendation Engines Across Global E-commerce" report</a>.</p>
         <p>This infographic is a single-page application built with HTML, Tailwind CSS, and Chart.js. No SVG or Mermaid.js were used.</p>
     </footer>
 
